--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pokedex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://chadmuro.github.io/pokedex",
+  "homepage": "https://chadmuro.github.io/pokedex",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
